fix for words being cut off in firefox

--- a/src/app/assessment/assessment.component.scss
+++ b/src/app/assessment/assessment.component.scss
@@ -40,7 +40,7 @@
 .form-field,
 .form-control {
     width: 70%;
-    height: 25px;
+    height: 2rem;
     border-radius: 4px;
     border: 1px solid #ccc;
     font-size: 13px;
@@ -55,7 +55,7 @@
   color: #9c9999;
 }
 .form-control {
-    height: 25px !important;
+    height: 2rem !important;
     border-radius: 4px !important
 }
 input.form-field,
